added section stats

--- a/index.html
+++ b/index.html
@@ -89,7 +89,6 @@
       </div>
     </section>
 
-    <!-- TODO responsive blog -->
     <section class="container blogs" id="blog">
       <h2 class="blogs__title">Blog du marécage</h2>
 
@@ -160,9 +159,37 @@
       </div>
     </section>
 
-    <section class="container" id="stats">statistiques</section>
+    <section class="stats" id="stats">
+      <div class="container">
 
-    <!-- TODO responsive movies -->
+        <div class="left">
+          <div class="left__slice-pie" id="slice-pie"></div>
+        </div>
+
+        <div class="right">
+          <h2 class="right__title">Des statistiques</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae enim cumque aliquam labore soluta explicabo
+            inventore, quaerat impedit ea sit optio possimus eius nisi odit.</p>
+          <div class="right__stats">
+            <div>
+              <p class="right__stats--big">630 M</p>
+              <p>Recettes</p>
+            </div>
+            <div>
+              <p class="right__stats--big">6</p>
+              <p>Nb films</p>
+            </div>
+
+          </div>
+          <div class="right__btn">
+            <a href="https://www.dreamworks.com/movies/shrek" target="_blank">Pour en savoir plus</a>
+          </div>
+        </div>
+
+      </div>
+
+    </section>
+
     <section class="container movies" id="movies">
       <h2 class="movies__title">Les film de Shreks</h2>
 
@@ -292,6 +319,7 @@
 
 
       <div class="last-line__author">Fait par: Isabelle Langlois</div>
+
       <div class="last-line__social">
 
         <img src="img/icons/facebook-25.png" alt="Logo Facebook">
@@ -299,12 +327,18 @@
         <img src="img/icons/twitter-25.png" alt="Logo Twitter">
         <img src="img/icons/instagram-25.jpg" alt="Logo Instagram">
       </div>
+
+      <!-- TODO Corriger responsive sour 550 mettre phon dans un group et email idem -->
       <div class="last-line__contact">
 
         <img src="img/icons/telephone-25.png" alt="Icône téléphone" class="last-line__contact--phone">
+
         <address href="tel:+15141234567" class="last-line__contact--phone">514-123-4567</address>
+
         <img src="img/icons/mail-25.png" alt="Icône courriel">
+
         <address href="mailto:cegep@troisriviere.ca">cegep@troisrivieres.ca</address>
+
 
       </div>
     </div>
