header nav in small screen

--- a/index.html
+++ b/index.html
@@ -23,16 +23,39 @@
 
     <nav class="menu">
       <ul>
-        <li class="menu__links"><a href="#blog">Blog</a></li>
-        <li class="menu__links"><a href="#gallery">Galerie</a></li>
-        <li class="menu__links"><a href="#stats">statistiques</a></li>
-        <li class="menu__links"><a href="#movies">Films</a></li>
-        <li class="menu__links"><a href="#contact-us">Contactez-nous</a></li>
+        <li class="menu__link">
+          <a href="#blog">
+            <span class="link__text">Blog</span>
+            <img class="link__img" src="./img/menu/blog.png" alt="Icône de bog" />
+          </a>
+        </li>
+        <li class="menu__link">
+          <a href="#gallery">
+            <span class="link__text">Galerie</span>
+            <img class="link__img" src="./img/menu/gallery.png" alt="Icône gallerie photo" />
+          </a>
+        </li>
+        <li class="menu__link">
+          <a href="#stats">
+            <span class="link__text">Statistiques</span>
+            <img class="link__img" src="./img/menu/stats.png" alt="Icône statistique" />
+          </a>
+        </li>
+        <li class="menu__link">
+          <a href="#movies">
+            <span class="link__text">Films</span>
+            <img class="link__img" src="./img/menu/movie-icon-2.png" alt="Icône film" />
+          </a>
+        </li>
+        <li class="menu__link">
+          <a href="#contact-us">
+            <span class="link__text">Contactez-nous</span>
+            <img class="link__img" src="./img/menu/contact-us.png" alt="Icône contactez-nous" />
+          </a>
+        </li>
       </ul>
     </nav>
-    <!-- TODO Faire hamburger -->
-    <div class="menu__alt"> X</div>
-  </header>
+      </header>
 
   <main>
     <section class="carousel">
@@ -343,6 +366,8 @@
       </div>
     </div>
   </footer>
+  <!-- Possiblement faire un shrek qui apparait au défilement -->
+  <!-- https://www.youtube.com/watch?v=2decTjcdDKo&ab_channel=Grafikart.fr -->
 </body>
 
 </html>
