--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </li>
       </ul>
     </nav>
-      </header>
+  </header>
 
   <main>
     <section class="carousel">
@@ -73,9 +73,11 @@
           <a href="#img-3"></a>
           <a href="#img-4"></a>
         </div>
-        <!-- TODO Trouver comment empêcher que les ancre ramène les images en haut du viewport -->
-        <!-- TODO Faire une animation pour que ça tourne tout seul -->
-        <!-- TODO lorsque resize plus petit que l'image que l'image se place au centre  -->
+
+        <!-- CSS smooth scroll -->
+
+
+        <!-- TODO ?? lorsque resize plus petit que l'image que l'image se place au centre  -->
       </div>
     </section>
 
@@ -351,7 +353,7 @@
         <img src="img/icons/instagram-25.jpg" alt="Logo Instagram">
       </div>
 
-      <!-- TODO Corriger responsive sour 550 mettre phon dans un group et email idem -->
+      <!-- TODO Corriger responsive sour 550 mettre phone dans un group et email idem -->
       <div class="last-line__contact">
 
         <img src="img/icons/telephone-25.png" alt="Icône téléphone" class="last-line__contact--phone">
