fix position arrow in gallery on responsive

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
   <main>
     <section class="carousel container">
-      <div>
+      <div class="carousel__left--position">
         <span class="material-icons">chevron_left</span>
       </div>
       <div class="carousel__container">
@@ -82,7 +82,7 @@
           <a href="#img-4"></a>
         </div>
       </div>
-      <div>
+      <div class="carousel__right--position">
         <span class="material-icons">chevron_right</span>
       </div>
     </section>
