--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <header class="container ">
     <div class="header">
       <h1>Site de Sherk</h1>
-      <div class="container__logo">
+      <a class="container__logo" href="index.html">
         <img src="img/shrek-logo-200x100.png" alt="Logo Shrek">
-      </div>
+      </a>
 
       <nav class="menu">
         <ul>
@@ -323,9 +323,9 @@
   </main>
 
   <footer class="container">
-    <div class="container__logo">
+    <a class="container__logo" href="index.html">
       <img src="img/shrek-logo-200x100.png" alt="Logo Shrek" class="logo">
-    </div>
+    </a>
 
     <nav class="menu">
       <ul>
